k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: securetask
  labels:
    app.kubernetes.io/part-of: securetask
