k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: securetask-api
  namespace: securetask
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: securetask.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: securetask-api
                port:
                  number: 80
